# island-agent

./: Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  设计agent规划.docx
app/: graph.py  main.py
app/agent/: __init__.py  runtime.py
app/asr/: api.py
app/auth/: auth_context.py
app/chat/: __init__.py  api.py  store.py
app/config/: __init__.py  mcp_config.py  settings.py
app/db/: __init__.py  runtime.py
app/files/: __init__.py  api.py  tools.py
app/frontend/: index.html
app/lighting/: __init__.py  api.py  fixtures.py  layout.py  requirements.py  schemas.py  store.py  tools.py
app/memory/: __init__.py  api.py  compactor.py  episode_vector.py  extractor.py  mem0_store.py  memory_runtime.py  store.py
app/model/: llm.py
app/observability/: __init__.py  langfuse_runtime.py
app/prompts/: prompt.py
app/sandbox/: __init__.py  backend.py  context.py  manager.py  store.py
app/tasks/: __init__.py  api.py  scheduler.py  store.py  tools.py
app/tools/: __init__.py  sandbox_info.py  skills_manager.py
docs/: architecture.md  lighting-step1a-local-debug.html  lighting-step1a-local-debug.md  security-guardrails.md
isolution_ai-test/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  config.py  data_test.py  docker_run_prod.sh  docker_run_test.sh  isolution_run.py  requirements.txt  start_isolution_dev.sh  start_isolution_prod.sh  start_isolution_test.sh  station_hall_rooms.json  test.py  test2.py  test_validation.py
scripts/: verify_lighting_step1a.py  verify_lighting_step2a.py  verify_lighting_step3a.py  verify_lighting_step4a.py
(+50 files in other folders)
